# github-watcher

./: .gitignore  CODEOWNERS  MANIFEST.in  README.md  build_and_run.sh  build_single_executable.sh  clean.py  github-pr-watcher.spec  github_auth.py  main.py  notifications.py  pyproject.toml  run.sh  setup.py  test_formula.sh
.github/workflows/: publish.yml
Formula/: github-pr-watcher.rb
gh_notify.app/Contents/Resources/: applet.rsrc
github_pr_watcher/: github_prs_client.py  main.py  objects.py
github_pr_watcher/ui/: main_window.py  refresh_worker.py  settings_dialog.py  stats_dialog.py
github_watcher/: cache.py  github_prs.py  main.py  notifications.py  objects.py  ui.py  utils.py
github_watcher/gh_notify.app/Contents/MacOS/: applet
github_watcher/gh_notify.app/Contents/Resources/: applet.icns
scripts/: create_release.py  post_install.py  release.py
src/: github_auth.py  github_prs.py  github_prs_client.py  main.py  notifications.py  objects.py  settings.py  state.json  state.py  ui.py  utils.py
src/gh_notify.app/Contents/Resources/Scripts/: main.scpt
src/resources/: AppIcon.icns
src/ui/: __init__.py  combo_box.py  filters.py  main_window.py  pr_card.py  refresh_worker.py  section_frame.py  settings_dialog.py  state.json  state.py  theme.py  themes.py  ui_state.py  utils.py
