[tool.poetry]
name = "github-watcher"
version = "0.1.0"
description = "A cmd-line tool to help keep an eye on pull requests"
authors = ["gm2211"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.25.1"
xxhash = "^3.5.0"
pygame = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
